=======================
Legend
=======================
 [+]  A feature added
 [-]  A bug fixed
 [*]  A change
 [!]  An important note
=======================

2008/04/16 oleh_derevenko

 [-]  Fixed bug with storage memory not being properly zeroed at allocation.

 [*]  Memory customization changed to match assertion failure handler 
      customization. Now it is not necessary to save original pointers,
      just NULL-s are to be assigned to revert from customized to
      default memory menager.
      
2008/04/08 oleh_derevenko

 [!]  Licensing changed: permission to distribute/use library under zlib/libpng
      license added.
      
2008/04/07 oleh_derevenko

 [+]  Initial commit